Added files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 # SAInt log files
-*.log
+**/*.log
+
+# bin folders
+HelicsDotNet/ElectricFederate/bin/**
+HelicsDotNet/GasFederate/bin/**
+HelicsDotNet/HelicsDotNetAPI/bin/**
+
+# obj folders
+HelicsDotNet/ElectricFederate/obj/**
+HelicsDotNet/GasFederate/obj/**
+HelicsDotNet/HelicsDotNetAPI/obj/**
