--- a/HelicsDotNet/GasFederate/GasFederate.csproj
+++ b/HelicsDotNet/GasFederate/GasFederate.csproj
@@ -85,6 +85,10 @@
       <Project>{0828af05-b251-4063-ae2b-319b634d15ab}</Project>
       <Name>HelicsDotNetAPI</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SAIntHelicsAPI\SAIntHelicsLib.csproj">
+      <Project>{2e6947e8-3f38-4263-9a7d-22cab425c4d9}</Project>
+      <Name>SAIntHelicsLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
