Update Helics Csharp wrapper to new helics versions 3.0.1-develop-g2855bade

--- a/HelicsDotNet/HelicsDotNetAPI/HelicsDotNetAPI.csproj
+++ b/HelicsDotNet/HelicsDotNetAPI/HelicsDotNetAPI.csproj
@@ -68,13 +68,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="CShelics.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="helicsSharedLib.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="helics.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="libzmq-v142-mt-4_3_3.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="libzmq-v142-mt-4_3_4.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
