--- a/HelicsDotNet/GasFederate/GasFederate.csproj
+++ b/HelicsDotNet/GasFederate/GasFederate.csproj
@@ -16,6 +16,7 @@
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -62,7 +63,7 @@
   <ItemGroup>
     <Reference Include="SAInt-API, Version=3.0.13.3, Culture=neutral, PublicKeyToken=2f0816c0606388a4, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files\encoord\SAInt Software 2.0\SAInt-API.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files\encoord\SAInt 3.0\SAInt-API.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
