API.EvalFloat calls updated

--- a/HelicsDotNet/SAIntHelicsAPI/SAIntHelicsLib.csproj
+++ b/HelicsDotNet/SAIntHelicsAPI/SAIntHelicsLib.csproj
@@ -52,9 +52,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="SAInt-API, Version=3.0.13.3, Culture=neutral, PublicKeyToken=2f0816c0606388a4, processorArchitecture=AMD64">
+    <Reference Include="SAInt-Core, Version=3.1.2.0, Culture=neutral, PublicKeyToken=2f0816c0606388a4, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files\encoord\SAInt 3.0\SAInt-API.dll</HintPath>
+      <HintPath>..\..\..\..\Workspaces\Workspace\SAInt Software\SAInt-3-0-GA\SAInt-Core\bin\x64\Debug\SAInt-Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
