--- a/HelicsDotNet/ElectricFederate/ElectricFederate.csproj
+++ b/HelicsDotNet/ElectricFederate/ElectricFederate.csproj
@@ -97,6 +97,10 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SAInt-Core, Version=3.0.0.0, Culture=neutral, PublicKeyToken=2f0816c0606388a4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Workspaces\Workspace\SAInt Software\Development\dev-US2113-new\SAInt-Core\bin\Debug\SAInt-Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
