--- a/HelicsDotNet/SAIntHelicsAPI/SAIntHelicsLib.csproj
+++ b/HelicsDotNet/SAIntHelicsAPI/SAIntHelicsLib.csproj
@@ -52,6 +52,10 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SAInt-Core, Version=3.0.0.0, Culture=neutral, PublicKeyToken=2f0816c0606388a4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Workspaces\Workspace\SAInt Software\Development\dev-US2113-new\SAInt-Core\bin\Debug\SAInt-Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
