--- a/HelicsDotNet/SAIntHelicsAPI/SAIntHelicsLib.csproj
+++ b/HelicsDotNet/SAIntHelicsAPI/SAIntHelicsLib.csproj
@@ -54,7 +54,7 @@
   <ItemGroup>
     <Reference Include="SAInt-Core, Version=3.0.0.0, Culture=neutral, PublicKeyToken=2f0816c0606388a4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Workspaces\Workspace\SAInt Software\Development\dev\SAInt-Core\bin\Debug\SAInt-Core.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files\encoord\SAInt-v3-Alpha\SAInt-Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
